fix: add z-index to mobile nav overlay so it appears above page content

--- a/src/components-next/Header/Header.module.scss
+++ b/src/components-next/Header/Header.module.scss
@@ -120,6 +120,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 99;
     flex-direction: column;
     align-items: stretch;
     justify-content: flex-start;
